# EntityMatching_SIGMOD_2020_Contest

./: CMakeLists.txt  README.md  dataset.cpp  dataset.h  filters.cpp  filters.h  index_brand.cpp  index_brand.h  index_model.cpp  index_model.h  intersection.cpp  intersection.h  main.cpp  merge_same.cpp  merge_same.h  resolve_others.cpp  resolve_others.h  reverse_index.cpp  reverse_index.h  split_brand.cpp  split_brand.h  util.cpp  util.h
c++ version/: README.md  dataset.h  filters.h  intersection.cpp  main.cpp  merge_same.cpp  merge_same.h  resolve_others.cpp  split_brand.cpp  util.h
python version/: README.md  dataset.py  edit_distance.py  filters.py  index_brand.py  index_model.py  intersection.py  main.py  merge_same.py  resolve_others.py  reverse_index.py  split_brand.py
